# spr-2026-mammography

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  run.py
configs/: base.yaml  base_transformer.yaml  exp001_tfidf_logreg.yaml  exp003_tfidf_lgbm.yaml  exp007_bertimbau_large.yaml  exp009_xlmr_large.yaml  exp010_bertimbau_es.yaml  exp011_bertimbau_ls.yaml  exp013_bertimbau_large_ls.yaml  exp015c_bertimbau_seed21.yaml  exp018_bertimbau_weighted_sampler.yaml  exp021a_biobertpt.yaml  exp021b_biobertpt_dapt.yaml  exp022_biobertpt_lr2e5.yaml  exp023_bertimbau_dedup.yaml  exp024_biobertpt_llrd.yaml  exp034b_456_specialist.yaml  exp040_specialist_456_synth.yaml  exp046_awp.yaml  exp047_specialist_023_synth.yaml
scripts/: analyze_duplicates.py  calibration_analysis.py  dapt_pretrain.py  final_push_status.py  gen_exp035_notebook.py  gen_exp044_notebook.py  gen_exp999_notebook.py  lr_sweep.py  plot_macro_f1_ablation.py  plot_macro_f1_ensemble_comparison.py  plot_macro_f1_llrd_sampler_comparison.py  plot_macro_f1_rerank_comparison.py  plot_macro_f1_synthetic_comparison.py  plot_macro_f1_threshold_comparison.py  prep_exp044_upload.sh  prep_exp998_upload.sh  prep_rerank_upload.sh  run_exp032_full_pipeline.sh  run_exp047_rerank_sweep.sh  run_final_push_batch.sh  run_next_batch.sh  run_sequential.sh  smoke_test_configs.py  synthetic_cls_pretrain.py  upload_ensemble_weights.sh  weight_sweep.py
src/: data.py  ensemble.py  evaluate.py  features.py  logging_utils.py  notebook_gen.py  predict.py  rerank.py  threshold.py  train.py  train_transformer.py
(+280 files in other folders)
