[project]
name = "spr-2026-mammography"
version = "0.1.0"
description = "Kaggle SPR 2026 Mammography Report Classification (Emory CS 534)"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "pyyaml>=6.0",
    "tqdm>=4.65",
    "lightgbm>=4.0",
    # GPU / transformer stack
    "torch>=2.2",
    "transformers>=4.40",
    "datasets>=2.14",
    "accelerate>=0.27",
    "wandb>=0.17",
    "sentencepiece>=0.1.99",   # required by mDeBERTa tokenizer
    "matplotlib>=3.10.8",
]

[dependency-groups]
dev = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

# ── PyTorch CUDA 12.4 wheel index ────────────────────────
[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
